tests/fixtures/fail/core_redefine_option.sc
use core.Option

let Option (T: type) = enum {
  Some(T),
  None,
}

let main(): i32 = { 42 }
